testsuite/poke.pkl/not-diag-1.pk
/* { dg-do compile } */

var a =
    !"foo"; /* { dg-error "invalid operand.*\n.*expected integral" } */
